Add health check

--- a/NetCore6/appsettings.json
+++ b/NetCore6/appsettings.json
@@ -1,4 +1,22 @@
 {
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Base-Template-API",
+        "Uri": "https://localhost:7014/hc"
+      }
+    ],
+    "Webhooks": [
+      {
+        "Name": "",
+        "Uri": "",
+        "Payload": "",
+        "RestoredPayload": ""
+      }
+    ],
+    "EvaluationTimeInSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,7 +27,7 @@
     "DefaultConnection": "Data Source=localhost;Initial Catalog=ApapDB;User ID=sa;Password=P@ssword1;MultipleActiveResultSets=True;Connect Timeout=100;Encrypt=False;"
   },
   "AppSettings": {
-    "ApiUrl": "http://localhost:8080"
+    "ApiUrl": "https://json-server-apap.herokuapp.com/"
   },
   "AllowedHosts": "*"
 }
