--- a/NetCore6/appsettings.Development.json
+++ b/NetCore6/appsettings.Development.json
@@ -1,4 +1,22 @@
 {
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Base-Template-API",
+        "Uri": "https://localhost:7014/hc"
+      }
+    ],
+    "Webhooks": [
+      {
+        "Name": "",
+        "Uri": "",
+        "Payload": "",
+        "RestoredPayload": ""
+      }
+    ],
+    "EvaluationTimeInSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,6 +24,15 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=ApapDB;User ID=sa;Password=P@ssword1;MultipleActiveResultSets=True;Connect Timeout=100;Encrypt=False;"
-  }
+    "DefaultConnection": "Server = ABEL; Database = cv-enterprise-project; Trusted_Connection = True;"
+  },
+  "AppSettings": {
+    "ApiUrl": "https://json-server-apap.herokuapp.com/"
+  },
+  "JWTSettings": {
+    "ClientId": "xI4bSie5s5mY29XV2y8xn3xZ72xeqUBZ",
+    "Secret": "UDFOvk0ULneiqKO5xZZg_VEewkQPoyzT0WzJ7iGieZV2qtphjxAxq7GeZTtIKEW6",
+    "ExpiresInMinutes": 10
+  },
+  "AllowedHosts": "*"
 }
