--- a/NetCore6/appsettings.json
+++ b/NetCore6/appsettings.json
@@ -24,10 +24,15 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=ApapDB;User ID=sa;Password=P@ssword1;MultipleActiveResultSets=True;Connect Timeout=100;Encrypt=False;"
+    "DefaultConnection": "Server = ABEL; Database = cv-enterprise-project; Trusted_Connection = True;"
   },
   "AppSettings": {
     "ApiUrl": "https://json-server-apap.herokuapp.com/"
+  },
+  "JWTSettings": {
+    "ClientId": "xI4bSie5s5mY29XV2y8xn3xZ72xeqUBZ",
+    "Secret": "UDFOvk0ULneiqKO5xZZg_VEewkQPoyzT0WzJ7iGieZV2qtphjxAxq7GeZTtIKEW6",
+    "ExpiresInMinutes": 10
   },
   "AllowedHosts": "*"
 }
