--- a/NetCore6.Services/Server.Services.csproj
+++ b/NetCore6.Services/Server.Services.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\NetCore6.Bl\NetCore6.Bl.csproj" />
+    <ProjectReference Include="..\NetCore6.Bl\Server.Bl.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
