--- a/Server.Bl/Server.Bl.csproj
+++ b/Server.Bl/Server.Bl.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\NetCore6.Model\Server.Model.csproj" />
+    <ProjectReference Include="..\Server.Model\Server.Model.csproj" />
   </ItemGroup>
 
   <ItemGroup>
